Refactor application for English language support
- Updated Vietnamese localization files to reflect changes from Japanese to English.
- Modified routing to accommodate new English search views for words, idioms, grammar, and sentences.
- Created new components and styles for English grammar and idiom details.
- Removed Japanese kanji detail component as part of the transition to English.
- Updated contact information and terms of service with new details.
- Adjusted various UI elements to ensure consistency with the English language focus.