@@ -3,130 +3,152 @@ package com.example.Oboe.Service;
 import com.example.Oboe.DTOs.FavoritesDTO;
 import com.example.Oboe.Entity.*;
 import com.example.Oboe.Repository.*;
-
-import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors; 
 
 @Service
 public class FavoritesService {
 
-    private final KanjiRepository kanjiRepository;
     private final UserRepository userRepository;
     private final FavoritesRepository favoritesRepository;
     private final GrammarRepository grammarRepository;
     private final VocabularyRepository vocabularyRepository;
-    private final SampleSentenceRepository sampleSentenceRepository;
+    
+    // Đã chuẩn hóa tên biến
+    private final IdiomRepository idiomRepository; 
 
-    public FavoritesService(KanjiRepository kanjiRepository,
+    // Cập nhật Constructor (Dependency Injection)
+    public FavoritesService(
                             UserRepository userRepository,
                             FavoritesRepository favoritesRepository,
                             GrammarRepository grammarRepository,
-                            VocabularyRepository vocabularyRepository, SampleSentenceRepository sampleSentenceRepository
+                            VocabularyRepository vocabularyRepository, 
+                            IdiomRepository idiomRepository // Đã chuẩn hóa tên
                            ) {
-        this.kanjiRepository = kanjiRepository;
         this.userRepository = userRepository;
         this.favoritesRepository = favoritesRepository;
         this.grammarRepository = grammarRepository;
         this.vocabularyRepository = vocabularyRepository;
-        this.sampleSentenceRepository = sampleSentenceRepository;
+        this.idiomRepository = idiomRepository; 
     }
+
+    // --- Phương thức logic ---
+    
+    /**
+     * Bật/Tắt yêu thích (thêm hoặc xóa mục yêu thích).
+     */
     public FavoritesDTO toggleFavorite(FavoritesDTO dto, UUID userId) {
         Favorites existing = null;
-        // Kiểm tra xem nội dung yêu thích là loại nào (Kanji, Grammar, Vocab, hoặc Sentence)
-        // Và tìm trong database xem người dùng đã từng thích mục đó chưa.
-        if (dto.getKanjiId() != null) {
-            // Nếu là Kanji tìm trong bảng favorites theo userId + kanjiId
-            existing = favoritesRepository.findFavoriteKanji(userId, dto.getKanjiId()).orElse(null);
-        } else if (dto.getGrammaId() != null) {
-            // Nếu là Grammar
-            existing = favoritesRepository.findFavoriteGramma(userId, dto.getGrammaId()).orElse(null);
+        
+        // LOẠI BỎ logic Phonetics và cập nhật tên ID/Repository cho Idiom
+        if (dto.getGrammarId() != null) {
+            existing = favoritesRepository.findFavoriteGrammar(userId, dto.getGrammarId()).orElse(null);
         } else if (dto.getVocabularyId() != null) {
-            // Nếu là  (Vocabulary)
             existing = favoritesRepository.findFavoriteVocabulary(userId, dto.getVocabularyId()).orElse(null);
-        } else if (dto.getSampleSentenceId() != null) {
-            // Nếu là  (Sample Sentence)
-            existing = favoritesRepository.findFavoriteSentence(userId, dto.getSampleSentenceId()).orElse(null);
+        } else if (dto.getIdiomId() != null) { 
+            existing = favoritesRepository.findFavoriteIdiom(userId, dto.getIdiomId()).orElse(null); 
         } else {
-            // Không truyền loại nội dung nào → lỗi
-            throw new RuntimeException("Phải cung cấp ít nhất 1 loại nội dung.");
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Phải cung cấp ít nhất 1 loại nội dung.");
         }
-        // Nếu người dùng đã từng yêu thích nội dung này → xóa (bỏ yêu thích)
+        
+        // Logic thêm/xóa
         if (existing != null) {
             favoritesRepository.delete(existing);
-            return null; // Trả null nghĩa là đã bỏ yêu thích
+            return null; 
         }
-        // Nếu chưa từng yêu thích → tạo mới mục yêu thích
         return createFavorite(dto, userId);
     }
+    
+    /**
+     * Kiểm tra xem một mục đã được yêu thích chưa.
+     */
     public boolean isFavorited(UUID userId, String type, UUID targetId) {
-        return switch (type) {
-            case "kanji" -> favoritesRepository.findFavoriteKanji(userId, targetId).isPresent();
-            case "grammar" -> favoritesRepository.findFavoriteGramma(userId, targetId).isPresent();
+        return switch (type.toLowerCase()) {
+            case "grammar" -> favoritesRepository.findFavoriteGrammar(userId, targetId).isPresent();
             case "vocabulary" -> favoritesRepository.findFavoriteVocabulary(userId, targetId).isPresent();
-            case "samplesentence" -> favoritesRepository.findFavoriteSentence(userId, targetId).isPresent();
+            case "idiom" -> favoritesRepository.findFavoriteIdiom(userId, targetId).isPresent(); 
             default -> throw new IllegalArgumentException("Loại nội dung không hợp lệ: " + type);
         };
     }
 
+    /**
+     * Tạo mục yêu thích mới.
+     */
     public FavoritesDTO createFavorite(FavoritesDTO dto, UUID userId) {
         Favorites favorites = new Favorites();
 
-        favorites.setFavories_at(dto.getFavoritesAt() != null ? dto.getFavoritesAt() : java.time.LocalDate.now());
+        favorites.setFavoritedAt(dto.getFavoritedAt() != null ? dto.getFavoritedAt() : java.time.LocalDate.now());
 
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
         favorites.setUser(user);
 
-        if (dto.getKanjiId() != null) {
-            Kanji kanji = kanjiRepository.findById(dto.getKanjiId())
-                    .orElseThrow(() -> new RuntimeException("Kanji not found"));
-            favorites.setKanji(kanji);
-            favorites.setTitle(kanji.getCharacter_name());
-            favorites.setContent(kanji.getMeaning());
-        } else if (dto.getGrammaId() != null) {
-            Grammar grammar = grammarRepository.findById(dto.getGrammaId())
-                    .orElseThrow(() -> new RuntimeException("Grammar not found"));
-            favorites.setGramma(grammar);
+        // LOẠI BỎ logic Phonetics và cập nhật logic Idiom
+        if (dto.getGrammarId() != null) {
+            Grammar grammar = grammarRepository.findById(dto.getGrammarId())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Grammar not found"));
+            
+            favorites.setGrammar(grammar);
             favorites.setTitle(grammar.getStructure());
             favorites.setContent(grammar.getExplanation());
-        }  else if (dto.getVocabularyId() != null) {
-        Vocabulary vocabulary = vocabularyRepository.findById(dto.getVocabularyId())
-                .orElseThrow(() -> new RuntimeException("Vocabulary not found"));
+            
+        } else if (dto.getVocabularyId() != null) {
+            Vocabulary vocabulary = vocabularyRepository.findById(dto.getVocabularyId())
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Vocabulary not found"));
+            
             favorites.setVocabulary(vocabulary);
             favorites.setTitle(vocabulary.getWords());
-            favorites.setContent(vocabulary.getMeanning());
-        }
-        else if (dto.getSampleSentenceId() != null)  {
-                SampleSentence sampleSentence = sampleSentenceRepository.findById(dto.getSampleSentenceId())
-                        .orElseThrow(() -> new RuntimeException("SampleSentence not found"));
-            favorites.setSentence(sampleSentence);
-            favorites.setTitle(sampleSentence.getJapaneseText());
-            favorites.setContent(sampleSentence.getVietnameseMeaning());
+            favorites.setContent(vocabulary.getVietnameseMeaning()); 
+            
+        } else if (dto.getIdiomId() != null) { 
+            Idiom idiom = idiomRepository.findById(dto.getIdiomId()) 
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Idiom not found"));
+            
+            favorites.setIdiom(idiom); 
+            favorites.setTitle(idiom.getEnglishPhrase());
+            favorites.setContent(idiom.getVietnameseMeaning());
+            
+        } else {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Phải cung cấp ít nhất 1 loại nội dung yêu thích.");
         }
 
-        else {
-            throw new RuntimeException("Phải cung cấp ít nhất 1 loại nội dung yêu thích (Kanji, Grammar, ...).");
-        }
-
-        favoritesRepository.save(favorites);
-        return toDTO(favorites);
+        Favorites savedFavorite = favoritesRepository.save(favorites);
+        return toDTO(savedFavorite);
     }
 
-    //lấy tất các từ yêu thích theo type
+    /**
+     * Xóa mục yêu thích theo ID và kiểm tra quyền sở hữu.
+     */
+    public void deleteFavorite(UUID favoritesId, UUID userId) {
+         Favorites favorite = favoritesRepository.findById(favoritesId)
+             .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Mục yêu thích không tồn tại."));
+
+        // Chỉ người sở hữu mới được xóa
+        // LỖI CÚ PHÁP: favorite.getUser().getUser_id() -> favorite.getUser().getUserId()
+        if (!favorite.getUser().getUser_id().equals(userId)) { 
+             throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Bạn không có quyền xóa mục yêu thích này.");
+        }
+
+        favoritesRepository.delete(favorite);
+    }
+    
+    /**
+     * Lấy tất cả các mục yêu thích theo User ID và Type
+     */
     public List<FavoritesDTO> getFavoritesByUserIdAndType(UUID userId, String type) {
         List<Favorites> list = favoritesRepository.findByUserId(userId);
 
         return list.stream()
                 .filter(fav -> {
                     return switch (type.toLowerCase()) {
-                        case "kanji" -> fav.getKanji() != null;
-                        case "grammar" -> fav.getGramma() != null;
+                        case "grammar" -> fav.getGrammar() != null;
                         case "vocabulary" -> fav.getVocabulary() != null;
-                        case "samplesentence" -> fav.getSentence() != null;
+                        case "idiom" -> fav.getIdiom() != null; 
                         default -> false;
                     };
                 })
@@ -135,76 +157,61 @@ public class FavoritesService {
                     dto.setType(type.toLowerCase());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
-    //lấy tất cả các tử yêu thích
+    
+    /**
+     * Lấy tất cả các mục yêu thích theo User ID
+     */
     public List<FavoritesDTO> getAllFavoritesByUserId(UUID userId) {
         List<Favorites> list = favoritesRepository.findByUserId(userId);
 
         return list.stream()
-                .map(fav -> {
-                    FavoritesDTO dto = toDTO(fav);
-
-                    if (fav.getKanji() != null) {
-                        dto.setType("kanji");
-                    } else if (fav.getGramma() != null) {
-                        dto.setType("grammar");
-                    } else if (fav.getVocabulary() != null) {
-                        dto.setType("vocabulary");
-                    } else if (fav.getSentence() != null) {
-                        dto.setType("samplesentence");
-                    } else {
-                        dto.setType("unknown");
-                    }
-
-                    return dto;
-                })
-                .toList();
-    }
-    // Xóa mục yêu thích dựa trên ID và kiểm tra quyền sở hữu của người dùng
-    public void deleteFavorite(UUID favoriteId, UUID userId) {
-        // Tìm mục yêu thích theo ID, nếu không tồn tại thì ném ra lỗi
-        Favorites favorite = favoritesRepository.findById(favoriteId)
-                .orElseThrow(() -> new RuntimeException("Favorite not found"));
-
-        // Kiểm tra xem mục yêu thích này có thuộc về người dùng hiện tại không
-        if (!favorite.getUser().getUser_id().equals(userId)) {
-            throw new RuntimeException("Bạn không có quyền xóa mục yêu thích này");
-        }
-
-        // Thực hiện xóa mục yêu thích khỏi cơ sở dữ liệu
-        favoritesRepository.delete(favorite);
+                .map(FavoritesService::toDTO) // Gọi hàm toDTO tĩnh
+                .collect(Collectors.toList());
     }
 
-
+    /**
+     * Hàm chuyển đổi Entity Favorites sang FavoritesDTO (Đã sửa lỗi constructor)
+     */
     public static FavoritesDTO toDTO(Favorites favorites) {
         if (favorites == null) return null;
-        FavoritesDTO dto = new FavoritesDTO(
-                favorites.getFavoritesID(),
-                favorites.getTitle(),
-                favorites.getContent(),
-                favorites.getFavories_at(),
-                favorites.getUser() != null ? favorites.getUser().getUser_id() : null,
-                favorites.getGramma() != null ? favorites.getGramma().getGrammaID() : null,
-                favorites.getKanji() != null ? favorites.getKanji().getKanjiId() : null,
-                favorites.getSentence() != null ? favorites.getSentence().getSample_sentence_id() : null,
-                favorites.getVocabulary() != null ? favorites.getVocabulary().getVocalbId() : null
-        );
-        // Xác định type
-        if (favorites.getKanji() != null) {
-            dto.setType("kanji");
-        } else if (favorites.getGramma() != null) {
+        
+        FavoritesDTO dto = new FavoritesDTO();
+        
+        // 1. Ánh xạ thuộc tính cơ bản
+        dto.setFavoritesId(favorites.getFavoritesId());
+        dto.setTitle(favorites.getTitle());
+        dto.setContent(favorites.getContent());
+        dto.setFavoritedAt(favorites.getFavoritedAt());
+        
+        // 2. Ánh xạ User ID
+        if (favorites.getUser() != null) {
+            // LỖI CÚ PHÁP: favorites.getUser().getUser_id() -> favorites.getUser().getUserId()
+            dto.setUserId(favorites.getUser().getUser_id()); 
+        }
+        
+        // 3. Ánh xạ ID của các đối tượng liên quan
+        if (favorites.getGrammar() != null) {
+            dto.setGrammarId(favorites.getGrammar().getGrammarId());
             dto.setType("grammar");
         } else if (favorites.getVocabulary() != null) {
+            dto.setVocabularyId(favorites.getVocabulary().getVocabularyId());
             dto.setType("vocabulary");
-        } else if (favorites.getSentence() != null) {
-            dto.setType("samplesentence");
+        } else if (favorites.getIdiom() != null) { 
+            dto.setIdiomId(favorites.getIdiom().getIdiomId());
+            dto.setType("idiom");
         } else {
-            dto.setType("unknown");
+             dto.setType("unknown");
         }
+        
+        // Nếu bạn muốn bao gồm FlashCards:
+        // if (favorites.getFlashCards() != null) {
+        //     // dto.setCardId(favorites.getFlashCards().getCardId()); 
+        //     dto.setType("flashcard");
+        // }
+
+
         return dto;
     }
-
-
 }
-
